Ajout de nouvelles pages pour le tutoriel

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,9 @@
     <title>Astro</title>
   </head>
   <body>
-    <h1>Mon Site Astro</h1>
+    <h1>A propos</h1>
+    <h2>Ceci est un test</h2>
+    <p>Le but est de pouvoir m'exercer &agrave; la pratique du d&eacute;veloppement dans le framework Astro</p>
+    <p>Pour l'instant, rien de bien compliqu&eacute; !</p>
   </body>
 </html>
