--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,16 @@
----
----
 <a href="/">Accueil</a>
 <a href="/about/">A propos</a>
 <a href="/blog/">Blog</a>
 
 <html lang="fr">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
     <title>Astro</title>
   </head>
   <body>
-    <h1>Mon Site Astro</h1>
+    <h1>Mon Premier Blog</h1>
+    <p>Voici une &eacute;bauche de mon premier blog !</p>
   </body>
-</html>
