--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,3 +1,8 @@
+---
+import '../styles/global.css'
+const pageTitle = "Mon premier blog";
+---
+
 <a href="/">Accueil</a>
 <a href="/about/">A propos</a>
 <a href="/blog/">Blog</a>
@@ -8,9 +13,14 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>Mon Premier Blog</h1>
+    <h1>{pageTitle}</h1>
     <p>Voici une &eacute;bauche de mon premier blog !</p>
+    <ul>
+      <a href="/posts/post-1/">Post n&deg; 1</a>
+      <a href="/posts/post-2/">Post n&deg; 2</a>
+      <a href="/posts/post-3/">Post n&deg; 3</a>
+    </ul>
   </body>
