--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css'
+const pageTitle="Accueil"
 ---
 <a href="/">Accueil</a>
 <a href="/about/">A propos</a>
@@ -10,9 +12,9 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
-    <h1>Mon Site Astro</h1>
+    <h1>{pageTitle}</h1>
   </body>
 </html>
