--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,16 +1,14 @@
 ---
-
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro'
 import '../styles/global.css'
 
-
-const pageTitle = "Mon premier blog";
+const {pageTitle} = Astro.props
 ---
 
 <html lang="fr">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} >
@@ -19,12 +17,7 @@ const pageTitle = "Mon premier blog";
   <body>
     <Header/>
     <h1>{pageTitle}</h1>
-    <p>Voici une &eacute;bauche de mon premier blog !</p>
-    <ul>
-      <a href="/posts/post-1/">Post n&deg; 1</a>
-      <a href="/posts/post-2/">Post n&deg; 2</a>
-      <a href="/posts/post-3/">Post n&deg; 3</a>
-    </ul>
+    <slot/>
     <Footer/>
     <script>
       import '../scripts/menu.js';
