--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,8 @@
 ---
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro'
 import '../styles/global.css'
+
 const pageTitle = "A propos";
 
 const identite = {
@@ -19,10 +22,6 @@ const skillColor = "navy";
 const fontWeight = "bold";
 const textCase = "uppercase";
 ---
-
-<a href="/">Accueil</a>
-<a href="/about/">A propos</a>
-<a href="/blog/">Blog</a>
 
 <html lang="fr">
   <head>
@@ -44,6 +43,7 @@ const textCase = "uppercase";
     </style>
   </head>
   <body>
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>Ceci est un test</h2>
     <p>Le but est de pouvoir m'exercer &agrave; la pratique du d&eacute;veloppement dans le framework Astro</p>
@@ -61,5 +61,9 @@ const textCase = "uppercase";
     {content && <p>Je suis content d'apprendre ASTRO !</p>}
     {fini && <p>J'ai termin&eacute; le tuto ASTRO !</p>}
     {objectif === 3 ? <p>L'objectif est de le finir dans 3 jours.</p>: <p>Je n'ai pas de date pour l'objectif</p>}
+    <Footer/>
+    <script>
+      import '../scripts/menu.js';
+    </script>
   </body>
 </html>
