Poursuite tutoriel Astro

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,4 +2,5 @@
     <a href="/">Accueil</a>
     <a href="/about/">A propos</a>
     <a href="/blog/">Blog</a>
+    <a href="/tags/">Tags</a>
 </div>
