--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,16 +1,44 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import BlogPost from "../components/BlogPost.astro";
 const { frontmatter } = Astro.props;
+const allPosts = Object.values(import.meta.glob('../pages/posts/*.md', { eager: true }));
+
 ---
 
 <BaseLayout pageTitle={frontmatter.title}>
     <p>Written by {frontmatter.author}</p>
     <p>in : {frontmatter.location}</p>
     <p>Published on: {frontmatter.pubDate.toString().slice(0,10)}</p>
-    <p class="description">{frontmatter.description}</p>
+    <p><em>{frontmatter.description}</em></p>
     <slot />
+    <p>Articles connexes</p>
+    <div class="tags">
+    {frontmatter.tags.map((tag) => (
+        <p class="tag"><a href={`/tags/${tag}`}>{tag}</a></p>)
+    )}
+    </div>
     <p>Découvrez mes autres posts :</p>
-    <script>
-        import '../scripts/blogPosts' 
-    </script>
+    <ul>
+        {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} author={post.frontmatter.author} pubDate={post.frontmatter.pubDate.toString().slice(0,10)}/>)}
+    </ul>
 </BaseLayout>
+<style>
+a {
+    color: #00539F;
+}
+
+.tags {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tag {
+    margin: 0.25em;
+    border: dotted 1px #a1a1a1;
+    border-radius: .5em;
+    padding: .5em 1em;
+    font-size: 1.15em;
+    background-color: #F8FCFD;
+}
+</style>
