--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,6 +2,7 @@
 
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro'
+import BlogPost from '../components/BlogPost.astro';
 import '../styles/global.css'
 
 
@@ -22,7 +23,7 @@ const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true })
     <h1>{pageTitle}</h1>
     <p>Voici une &eacute;bauche de mon premier blog !</p>
     <ul>
-      {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title} by {post.frontmatter.author} ({post.frontmatter.pubDate.toString().slice(0,10)})</a></li>)}
+      {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title} author={post.frontmatter.author} pubDate={post.frontmatter.pubDate.toString().slice(0,10)}/>)}
     </ul>
     <Footer/>
     <script>
